--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,135 +1,187 @@
+<h1 id="titulo"></h1>
 
-    <div class="backgroundRegister  "> 
-    <div class="comtainer containerRegister">
-        <div class="row">
-            <div class="col-1"></div>
-             <div class="col-5 imgContainer">
-            <a href="#">
-                <img src="../../assets/insinia.png" class="img-fluid float logo" ></a> </div>
-         
-<!-- <div class="col-1"></div> -->
-            <div class="col-5 pt-3 form"  style="display: none;">
-                           
-                        <div class="col-12  rounded-3 bg-registro ">
-                          
-                        <div class="row justify-content-center" id="registro">
-                            <div class="col-5 inputsRegister">
-                                <label for="inputName"></label>
-                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Nombre">
-<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
- -->                            </div> 
-                           
-                        </div>
-                        <div class="row justify-content-center ">
-                            <div class="col-5 inputsRegister">
-                                <label for="inpuLastName"></label>
-                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apellido">
-                           
-                            </div> 
-                        </div>
-                        <div class="row justify-content-center pb-4">
-                            <div class="col-5 inputsRegister">
-                                <label for="inputNick"></label>
-                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apodo">
-                           
-                            </div> 
-                            
-                        </div>
-                        <div class="row justify-content-center pb-4">
-                            <div class="col-5 inputsRegister">
-                                <label for="inputNick"></label>
-                                <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
-                           
-                            </div> 
-                            
-                        </div>
-                        
+<div class="backgroundRegister">
+  <div class="comtainer containerRegister">
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-5 imgContainer">
+        <a href="#">
+          <img src="../../assets/insinia.png" class="img-fluid float logo"
+        /></a>
+      </div>
+
+      <!-- <div class="col-1"></div> -->
+      <div class="col-5 pt-3 form" id="firstForm" *ngIf="firstFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister">
+              <label for="inputName"></label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                aria-describedby="name"
+                placeholder="Nombre"
+              />
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+ -->
             </div>
-       
-
-                </div>   
-            
-                <div class="col-5 pt-3 form" style="display: none;">
-                           
-                    <div class="col-12  rounded-3 bg-registro ">
-                      
-                    <div class="row justify-content-center" id="registro">
-                        <div class="col-5 inputsRegister">
-                            <label for="inputName"></label>
-                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Correo">
-<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
--->                            </div> 
-                       
-                    </div>
-                    <div class="row justify-content-center ">
-                        <div class="col-5 inputsRegister">
-                            <label for="inpuLastName"></label>
-                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Contraseña">
-                       
-                        </div> 
-                    </div>
-                    <div class="row justify-content-center pb-4">
-                        <div class="col-5 inputsRegister">
-                            <label for="inputNick"></label>
-                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Repite la contraseña">
-                       
-                        </div> 
-                        
-                    </div>
-                    <div class="row justify-content-center pb-4">
-                        <div class="col-5 inputsRegister">
-                            <label for="inputNick"></label>
-                            <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
-                       
-                        </div> 
-                        
-                    </div>
-                    
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-5 inputsRegister">
+              <label for="inpuLastName"></label>
+              <input
+                type="text"
+                class="form-control"
+                id="lastName"
+                aria-describedby="name"
+                placeholder="Apellido"
+              />
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister">
+              <label for="inputNick"></label>
+              <input
+                type="text"
+                class="form-control"
+                id="nick"
+                aria-describedby="name"
+                placeholder="Apodo"
+              />
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister">
+              <label for="inputNick"></label>
+              <button
+                (click)="nextOne()"
+                type="submit"
+                class="btn btn-primary"
+                id="nextFirstForm"
+                aria-describedby="submit"
+              >
+                Siguiente
+              </button>
+            </div>
+          </div>
         </div>
-   
-        
+      </div>
+
+      <div class="col-5 pt-3 form" *ngIf="secondFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister">
+              <label for="inputMail"></label>
+              <input
+                ngModel
+                email
+                type="email"
+                class="form-control"
+                id="email"
+                aria-describedby="name"
+                placeholder="Correo"
+              />
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
             </div>
-        
-            <div class="col-5 pt-3 form">
-                           
-                <div class="col-12  rounded-3 bg-registro ">
-                  
-                <div class="row justify-content-center" id="registro">
-                    <div class="col-5 inputsRegister">
-                        <label for="inputName"></label>
-                        <input type="date" class="form-control " id="name" aria-describedby="name" placeholder="Fecha de nacimiento">
-<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
--->                            </div> 
-                   
-                </div>
-               
-                <div class="row justify-content-center ">
-                    <div class="col-5 inputsRegister">
-                        <label for="inpuLastName"></label>
-                        <textarea name="" id="" class="form-control"  ></textarea>
-                   
-                    </div> 
-                </div>
-                <div class="row justify-content-center pb-4">
-                  
-                    
-                </div>
-                <div class="row justify-content-center pb-4">
-                    <div class="col-5 inputsRegister">
-                        <label for="inputNick"></label>
-                        <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
-                   
-                    </div> 
-                    
-                </div>
-                
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-5 inputsRegister">
+              <label for="inpuPassword"></label>
+              <input
+                type="text"
+                class="form-control"
+                id="password"
+                aria-describedby="name"
+                placeholder="Contraseña"
+              />
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister">
+              <label for="inputPassword2"></label>
+              <input
+                type="text"
+                class="form-control"
+                id="password2"
+                aria-describedby="name"
+                placeholder="Repite la contraseña"
+              />
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister">
+              <label for="inputNick"></label>
+              <button
+                (click)="nextSecond()"
+                type="submit"
+                class="btn btn-primary"
+                id="name"
+                aria-describedby="name"
+              >
+                Siguiente
+              </button>
+            </div>
+            <div class="col-5 inputsRegister">
+              <label for="inputNick"></label>
+              <button
+                (click)="backSecond()"
+                type="submit"
+                class="btn btn-primary"
+                id="name"
+                aria-describedby="name"
+              >
+                Atras
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-5 pt-3 form" *ngIf="thirdFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro3">
+            <div class="col-5 inputsRegister">
+              <label for="inputName"></label>
+              <input
+                type="date"
+                class="form-control"
+                id="birthDate"
+                aria-describedby="name"
+                placeholder="Fecha de nacimiento"
+              />
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
+            </div>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-5 inputsRegister">
+              <label for="inpuLastName"></label>
+              <textarea
+                name=""
+                id="description"
+                class="form-control"
+              ></textarea>
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4"></div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister">
+              <label for="inputDescription"></label>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                id="name"
+                aria-describedby="name"
+              >
+                Siguiente
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    
-        </div>
-        </div>
-        
-        </div>
-
-            </div>
-            
+  </div>
+</div>
