--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,15 +1,19 @@
-
- .backgroundRegister{
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgb(82,6,214);
-background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%, rgba(255,255,255,1) 62%);  
+.backgroundRegister {
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(82, 6, 214);
+  background: linear-gradient(
+    180deg,
+    rgba(82, 6, 214, 1) 0%,
+    rgba(109, 48, 243, 1) 32%,
+    rgba(255, 255, 255, 1) 62%
+  );
 }
- input::-webkit-input-placeholder {
-    text-align: center;
-    line-height: 100px;/* Centrado vertical */
-  }
+input::-webkit-input-placeholder {
+  text-align: center;
+  line-height: 100px; /* Centrado vertical */
+}
 
 /*   .registerTittle{
       position: absolute;
@@ -22,18 +26,12 @@ background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%,
       padding: 5px;
   } */
 
-  .registerTittle{
-    background-color: aliceblue;
-    position: absolute;
-       left:69%;
-      top: 30%;
-  }
-.containerRegister{
-   padding-top: 20%;
-    /* padding-top: 30%; */
+.containerRegister {
+  padding-top: 15%;
+  /* padding-top: 30%; */
 }
 
-.form{
+.form {
   text-align: center;
 }
 /* 
@@ -42,34 +40,32 @@ background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%,
     text-align: center;
   } */
 
-.next{
-    position:absolute;
-    margin-left: 13%;
-    margin-top: 1%;
-
+.next {
+  position: absolute;
+  margin-left: 13%;
+  margin-top: 1%;
 }
 
-.next:hover{
-    transform: scale(1.5);
+.next:hover {
+  transform: scale(1.5);
 }
 
-.logo{
-    width: 100%;
-    max-width: 300px; /* Original width of the logo image */ 
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    float: left;
-  }
-
-.logo:hover{
-    transform: scale(1.1);
+.logo {
+  width: 100%;
+  max-width: 300px; /* Original width of the logo image */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  float: left;
 }
 
-.inputsRegister{
-    max-width: 15em;
-    min-width: 10em !important;
-   
+.logo:hover {
+  transform: scale(1.1);
+}
+
+.inputsRegister {
+  max-width: 15em;
+  min-width: 10em !important;
 }
 /* 
 .bg-registro{
@@ -79,8 +75,6 @@ background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%,
     
 }
  */
-
-
 
 /* .registerForm{
     position:relative;
