--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,7 @@
 <div class="backgroundRegister">
 <div class="row">
   <div class="col-4"></div>
-<div class="col-4  mt-5 messageOne">Diviertete  Compite  Coopera</div>
+<div class="col-4  mt-5 messageOne">Diviertete <br> Compite <br>  Coopera</div>
 <div class="col-4"></div>
 
 </div>
@@ -135,6 +135,7 @@
                 Volver
               </button>
             </div>
+            <div class="col-2"></div>
             <div class="col-5 inputsRegister">
               <label for="inputNick"></label>
               <button
