--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,15 +33,12 @@
 
         <div class="row justify-content-center" id="landing-home">
             <div class="col-10 text-center text-color py-2 mb-3">
-                <h5 class="fw-bolder">
-                    ¡Empezamos!
-                </h5>
-                <h6>
-                    Ahora es el momento, puedes crearte tu cuenta o acceder a ella si ya has creado una.
-                </h6>
+                <h5 class="fw-bolder">¡Empezamos!</h5>
+                <h6>Ahora es el momento, puedes crearte tu cuenta o acceder a ella si ya has creado una.</h6>
             </div>
         </div>
 
+        
         <div class="row justify-content-center">
             <div class="col-4 col-lg-4 bg-color rounded text-light text-center">
                 <div class="row">
@@ -65,7 +62,7 @@
                         <li class="list-group-item">
                             <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Poder utilizar el panel de control.</p>
                         </li>
-                        <div class="row mx-2 mt-2">
+                        <div class="row mx-2 mt-3">
                             <button class="col bg-light btn btn-outline-color border-light shadow" routerLink="/register">¡Registrate!</button>
                         </div>
                     </ul>
@@ -107,6 +104,54 @@
             </div>
         </div>
     </div>
+
+    <!-- ***** Home Parallax Start ***** -->
+    <section class="mini bg-color g-0 p-0 m-0 mt-2 rounded" id="work-process">
+        <div class="container pb-3">
+            <div class="row">
+                <div class="col-lg-10">
+                    <div class="info text-start text-light pt-3">
+                        <h5>Ventajas</h5>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ***** Mini Box Start ***** -->
+            <div class="row text-center text-color">
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-eye-fill me-1"></i>Visualicación</strong>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-gear-fill me-1"></i>Rendimiento</strong>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-chat-text-fill me-1"></i>Debates</strong>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-share-fill me-1"></i>Compartir</strong>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-hand-thumbs-up-fill me-1"></i>Valorar</strong>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                    <div class="card p-2 m-1">
+                        <strong><i class="bi bi-people-fill me-1"></i>Aportar</strong>
+                    </div>
+                </div>
+            </div>
+            <!-- ***** Mini Box End ***** -->
+        </div>
+    </section>
 
     <div class="mt-3 bg-color-home-0 rounded">
 
@@ -206,9 +251,69 @@
             </div>
         </div>
     </div>
-    <div class="row justify-content-center mb-2">
-        <div class="col">
-            <hr class="line">
+</div>
+
+<div class="container-fluid bg-color fixed mt-3">
+    <div class="row bg-color-home justify-content-center">
+        <div class="col-2 text-light">
+            <ul>
+                <li class="list-group-item mt-3 p-0">
+                    <p class="fw-bolder">Insinia ™</p>
+                </li>
+                <li class="list-group-item p-0 m-0">
+                    <div class="d-flex">
+                        <i class="bi bi-facebook link-white-to-color me-2"></i>
+                        <i class="bi bi-google link-white-to-color me-2"></i>
+                        <i class="bi bi-twitter link-white-to-color me-2"></i>
+                        <i class="bi bi-youtube link-white-to-color me-2"></i>
+                        <i class="bi bi-pinterest link-white-to-color me-2"></i>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-2">
+            <li class="list-group-item mt-3 p-0">
+                <p class="fw-bolder">ACCESO</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0 mb-1" routerLink="/register">Register</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0" routerLink="/login">Login</p>
+            </li>
+        </div>
+
+        <div class="col-2">
+            <li class="list-group-item mt-3 p-0">
+                <p class="fw-bolder">SERVICIOS</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0 mb-1" routerLink="/register">Sobre nosotros</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0" routerLink="/login">Que ofrecemos</p>
+            </li>
+        </div>
+
+        <div class="col-2">
+            <li class="list-group-item mt-3 p-0">
+                <p class="fw-bolder">CONTACTANOS</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0 mb-1" routerLink="/register">Escríbenos</p>
+            </li>
+            <li class="list-group-item p-0 m-0">
+                <p class="link-white-to-color m-0" routerLink="/login">Asistencia</p>
+            </li>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col text-center">
+            <li class="list-group-item p-0 mt-3">
+                <p>© 2022 Todos los derechos reservados.</p>
+            </li>
         </div>
     </div>
 </div>
